--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide": "^0.515.0",
     "lucide-react": "^0.515.0",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
     "moongoose": "^0.0.1",
     "next": "15.3.3",
