--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.37.2",
+    "@liveblocks/client": "^3.0.0",
+    "@liveblocks/node": "^3.0.0",
+    "@liveblocks/react": "^3.0.0",
+    "@liveblocks/yjs": "^3.0.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -21,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.4",
+    "codemirror": "^6.0.1",
     "framer-motion": "^12.18.1",
     "lucide": "^0.515.0",
     "lucide-react": "^0.515.0",
@@ -43,6 +51,8 @@
     "tailwindcss": "^4.1.10",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^3.8.1",
+    "y-codemirror.next": "^0.3.5",
+    "yjs": "^13.6.27",
     "zod": "^3.25.67"
   },
   "devDependencies": {
