--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,43 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Next.js build output
+.next/
+out/
 
-# testing
-/coverage
+# TypeScript build info
+*.tsbuildinfo
 
-# next.js
-/.next/
-/out/
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+*.log
 
-# env files (can opt-in for committing if needed)
-.env*
+# OS files
+.DS_Store
+Thumbs.db
 
-# vercel
-.vercel
+# IDE/editor settings
+.vscode/
+.idea/
+*.swp
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Testing coverage
+coverage/
+.nyc_output/
+
+# Optional lock files (choose based on your package manager)
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Misc
+*.local
+*.tgz
