--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.18.6",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-markdown": "^6.3.3",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/lang-sql": "^6.9.0",
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.37.2",
     "@liveblocks/client": "^3.0.0",
@@ -19,11 +26,14 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/postcss": "^4.1.10",
     "@tsparticles/react": "^3.0.0",
+    "@uiw/codemirror-theme-dracula": "^4.23.13",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -45,6 +55,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-particles": "^2.12.2",
+    "react-resizable-panels": "^3.0.3",
     "sonner": "^2.0.5",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
