inculded jugde0 ,still need fixes

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.4",
     "codemirror": "^6.0.1",
+    "express-rate-limit": "^7.5.0",
     "framer-motion": "^12.18.1",
+    "limiter": "^3.0.0",
     "lucide": "^0.515.0",
     "lucide-react": "^0.515.0",
     "mongodb": "^6.17.0",
