--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "devmeet",
   "version": "0.1.0",
   "private": true,
+ 
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -31,6 +32,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@stream-io/node-sdk": "^0.4.24",
+    "@stream-io/video-react-sdk": "^1.18.6",
     "@tailwindcss/postcss": "^4.1.10",
     "@tsparticles/react": "^3.0.0",
     "@uiw/codemirror-theme-dracula": "^4.23.13",
@@ -59,6 +62,7 @@
     "react-particles": "^2.12.2",
     "react-resizable-panels": "^3.0.3",
     "sonner": "^2.0.5",
+    "stream-chat-react": "^13.2.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
@@ -75,6 +79,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "^15.3.3",
+    "postcss-preset-env": "^10.2.3",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
