--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@liveblocks/node": "^3.0.0",
     "@liveblocks/react": "^3.0.0",
     "@liveblocks/yjs": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
